utils: add nm_utils_modprobe()

https://bugzilla.gnome.org/show_bug.cgi?id=740651
(cherry picked from commit 4ad6099b016317563c14648ca6f04fb9e320d032)